--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "queue-protocol",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Queue protocol for WebSockets",
   "module": "lib/index",
   "types": "lib/index.d.ts",
-  "main": "bin/index.js",
+  "main": "lib/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
